After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 644648 - Doesn't correctly use sink volume control
Doesn't correctly use sink volume control
Status: RESOLVED FIXED
Product: banshee
Classification: Other
Component: GStreamer
git master
Other Linux
: Normal normal
: 1.x
Assigned To: Banshee Maintainers
Banshee Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-13 15:30 UTC by Sjoerd Simons
Modified: 2011-04-07 21:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Correctly detect sink volume control (3.61 KB, patch)
2011-03-13 15:32 UTC, Sjoerd Simons
committed Details | Review
Use the proper element for volume control (2.08 KB, patch)
2011-03-13 15:32 UTC, Sjoerd Simons
committed Details | Review
Update our current volume the pipeline volume changes (904 bytes, patch)
2011-03-13 15:32 UTC, Sjoerd Simons
committed Details | Review
Remove dead code (2.70 KB, patch)
2011-03-13 15:32 UTC, Sjoerd Simons
committed Details | Review

Description Sjoerd Simons 2011-03-13 15:30:50 UTC
Some audio sinks have their own volume control (for example pulseaudio), unfortunately the detection for this in banshee sems broken atm
Comment 1 Sjoerd Simons 2011-03-13 15:32:30 UTC
Created attachment 183281 [details] [review]
Correctly detect sink volume control

If an element is used as an audiosink which detects and dynamically
plugs the actual sink element, then we can only detect sink volume
support after this has happened. To trigger this, simply set the sink
state to READY, which should open the resources and thus load the actual
audio sink.
Comment 2 Sjoerd Simons 2011-03-13 15:32:33 UTC
Created attachment 183282 [details] [review]
Use the proper element for volume control
Comment 3 Sjoerd Simons 2011-03-13 15:32:37 UTC
Created attachment 183283 [details] [review]
Update our current volume the pipeline volume changes
Comment 4 Sjoerd Simons 2011-03-13 15:32:41 UTC
Created attachment 183284 [details] [review]
Remove dead code
Comment 5 Gabriel Burt 2011-03-15 14:19:52 UTC
Thanks Sjoerd, these patches look pretty good to me.  Can you describe the testing/QA you've done with them applied?  Have you tested with a sink that doesn't have its own volume control?

When the sink does have its own volume, does Banshee's volume slider affect the overall system/Pulseaudio volume?
Comment 6 Sjoerd Simons 2011-04-01 14:53:56 UTC
(In reply to comment #5)
> Thanks Sjoerd, these patches look pretty good to me.  Can you describe the
> testing/QA you've done with them applied?  Have you tested with a sink that
> doesn't have its own volume control?

It's a while ago, iirc i did test the other codepath (e.g.  the pulseaudio volume control one). but i mostly focussed on the pulseaudio bits as that's what i cared about :)
 
> When the sink does have its own volume, does Banshee's volume slider affect the
> overall system/Pulseaudio volume?

Banshees volume control will effect the volume of the banshee audio stream in pulseaudio. whether this effects the overall system volume is up to pulse.  e.g. in the gnome volume control you should see the per applicaiton volume change if you use the banshee thing
Comment 7 Gabriel Burt 2011-04-07 21:39:40 UTC
Committed to master, thanks Sjoerd!