libbanshee: Use the proper element for volume control (bgo#644648)

https://bugzilla.gnome.org/show_bug.cgi?id=644648

Signed-off-by: Gabriel Burt <gabriel.burt@gmail.com>